Remove overflow-y property that interferes with Select2 menus and isn't necessary for the fix in 96386a806b8be087a51adf5ad1ec11571a6e144e.

--- a/website/assets/sass/_searchview.scss
+++ b/website/assets/sass/_searchview.scss
@@ -43,7 +43,6 @@
         width: 260px;
         background-color: $pale-green;
         padding: $tiny-spacing;
-        overflow-y: auto;
         max-height: 550px;
         @include display(flex);
         @include flex-direction(column);
